tests/negative/test_fixed_name_taken.orb
fnc main () () {
    sym (x 0);
    fixed::global x i32;
};